[gd_scene load_steps=10 format=3 uid="uid://c8djburogdndp"]

[ext_resource type="Script" path="res://game/game.gd" id="1_85w3k"]
[ext_resource type="Theme" uid="uid://cbimufccfad2e" path="res://theme.tres" id="2_sfxa4"]
[ext_resource type="Script" path="res://game/cheatcodes.gd" id="3_26odb"]
[ext_resource type="AudioStream" uid="uid://u41fu8o4bixm" path="res://game/defeat.wav" id="4_u00hq"]
[ext_resource type="PackedScene" uid="uid://t13h716inaso" path="res://ui/ui.tscn" id="5_m2tri"]
[ext_resource type="PackedScene" uid="uid://bpgfvwxjiu6bp" path="res://shift/shift.tscn" id="6_kudon"]
[ext_resource type="AudioStream" uid="uid://7vhvt6j3g2h5" path="res://music/Gameoff_24_Scan or Scam_v1_SG.mp3" id="7_uxj0w"]
[ext_resource type="AudioStream" uid="uid://bnic8xu24yggh" path="res://music/Gameoff_24_Space Fugue-ure_v1_SG.mp3" id="8_avbln"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_t1byw"]
stream_count = 2
stream_0 = ExtResource("7_uxj0w")
stream_1 = ExtResource("8_avbln")

[node name="Game" type="Node"]
script = ExtResource("1_85w3k")

[node name="Ui" parent="." instance=ExtResource("5_m2tri")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Shift" parent="." instance=ExtResource("6_kudon")]
mouse_filter = 2

[node name="DefeatMenu" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("2_sfxa4")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="DefeatMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_sfxa4")

[node name="MainMenuButton" type="Button" parent="DefeatMenu/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="DefeatMenu/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="DefeatMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_sfxa4")
theme_type_variation = &"Heading"
text = "Defeat!"
horizontal_alignment = 1

[node name="Text" type="Label" parent="DefeatMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_sfxa4")
text = "Restart the game to play again"

[node name="Cheatcodes" type="Node" parent="."]
script = ExtResource("3_26odb")

[node name="StartFade" type="Timer" parent="Cheatcodes"]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="Cheatcodes"]
layer = 100

[node name="CheatcodeUi" type="Control" parent="Cheatcodes/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CheatcodeInputHbox" type="HBoxContainer" parent="Cheatcodes/CanvasLayer/CheatcodeUi"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="CheatcodeNameLabel" type="Label" parent="Cheatcodes/CanvasLayer/CheatcodeUi"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -611.0
offset_top = -38.0
offset_right = 610.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefeatSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("4_u00hq")
volume_db = 9.0
bus = &"Effects"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPlaylist_t1byw")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="DefeatMenu/MarginContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="Cheatcodes/StartFade" to="Cheatcodes" method="_on_start_fade_timeout"]
